--- a/static/css/me.css
+++ b/static/css/me.css
@@ -1,3 +1,10 @@
+body{
+    background: url("../images/bright-background.png");
+}
+
+
+/*-------------------padded--------------------*/
+
 .m-padded-mini {
     padding: 0.2em !important;
 }
@@ -9,6 +16,13 @@
 .m-padded-large {
     padding: 1.8em !important;
 }
+
+.m-padded-left-right-responsive{
+    padding-left: 4em !important;
+    padding-right: 4em !important;
+}
+
+/*-------------------padded tb--------------------*/
 
 .m-padded-tb-mini {
     padding-top: 0.2em !important;
@@ -59,6 +73,10 @@
     line-height: 1.8;
 }
 
+.m-text-slim {
+    font-weight: 150 !important;
+}
+
 .m-text-thin {
     font-weight: 300 !important;
 }
@@ -92,10 +110,17 @@
     margin-top: 2em !important;
 }
 
+.m-margin-bottom-small{
+    margin-bottom: 0.5em !important;
+}
 
 /*-------------------opacity--------------------*/
 .m-opacity-mini {
     opacity: 0.8 !important;
+}
+
+.m-opacity-tiny{
+    opacity: 0.6 !important;
 }
 
 /*------------------position-------------------*/
@@ -117,6 +142,17 @@
     margin: auto !important;
 }
 
+.m-container-small {
+    max-width: 60em !important;
+    margin: auto !important;
+}
+
+/*-----------------shadow------------------*/
+.m-shadow-small{
+    -webkit-box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
+}
+
 /*-----------------color------------------*/
 .m-black {
     color: #333 !important;
@@ -133,5 +169,16 @@
     }
     .m-mobile-show{
         display: block !important;
+    }
+    .m-padded-left-right-responsive{
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+    .m-mobile-left-right-clear{
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+    .m-mobile-wide{
+        width: 100% !important;
     }
 }
